--- a/app/src/main/res/layout/fragment_team_utama.xml
+++ b/app/src/main/res/layout/fragment_team_utama.xml
@@ -17,6 +17,7 @@
         android:scrollbars="vertical">
 
         <LinearLayout
+            android:id="@+id/container_team_list"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
