--- a/app/src/main/res/layout/badge_kecil.xml
+++ b/app/src/main/res/layout/badge_kecil.xml
@@ -3,18 +3,19 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/badge_green"
-    android:layout_gravity="center"
-    android:gravity="center"
+    android:layout_gravity="start"
+    android:gravity="start"
     android:paddingHorizontal="8dp"
     android:paddingVertical="4dp"
     android:layout_marginEnd="10dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/container_badge">
 
     <TextView
-        android:id="@+id/text_badge"
+        android:id="@+id/badge_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Badge"
+        android:text="Mendatang"
         android:fontFamily="@font/is_r"
         android:textSize="8sp"
         android:textColor="@color/white" />
