--- a/app/src/main/res/layout/fragment_event_list.xml
+++ b/app/src/main/res/layout/fragment_event_list.xml
@@ -16,7 +16,7 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/img_poster"
+            android:id="@+id/containerImg"
             android:layout_width="80dp"
             android:layout_height="96dp"
             android:layout_marginLeft="10dp"
@@ -29,6 +29,7 @@
             app:layout_constraintStart_toStartOf="parent">
 
             <ImageView
+                android:id="@+id/img_poster"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
@@ -43,12 +44,13 @@
             android:padding="10dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@id/img_poster"
+            app:layout_constraintStart_toEndOf="@id/containerImg"
             app:layout_constraintEnd_toEndOf="parent">
 
             <include layout="@layout/badge_kecil" />
 
             <TextView
+                android:id="@+id/text_date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="15 November 2025"
@@ -58,6 +60,7 @@
                 android:layout_marginVertical="8dp" />
 
             <TextView
+                android:id="@+id/text_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="SEMINAR NASIONAL EPIM 2025"
@@ -80,11 +83,13 @@
                     android:src="@drawable/icon_lokasi_abu" />
 
                 <TextView
+                    android:id="@+id/text_location"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Gor Djoeang 45 Politeknik Negeri Jember"
                     android:textColor="#7FFFFFFF"
+                    android:layout_gravity="center_vertical"
                     android:textSize="12sp"
                     android:fontFamily="@font/is_r"
                     android:maxLines="2"
