--- a/app/src/main/res/layout/badge_kecil.xml
+++ b/app/src/main/res/layout/badge_kecil.xml
@@ -8,11 +8,11 @@
     android:paddingHorizontal="8dp"
     android:paddingVertical="4dp"
     android:layout_marginEnd="10dp"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:id="@+id/container_badge">
 
     <TextView
-        android:id="@+id/badge_status"
+        android:id="@+id/text_badge_kecil"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Mendatang"
