--- a/app/src/main/res/layout/fragment_competition_utama.xml
+++ b/app/src/main/res/layout/fragment_competition_utama.xml
@@ -67,6 +67,7 @@
             android:paddingHorizontal="15dp">
 
             <LinearLayout
+                android:id="@+id/listitemkompetisitrending"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <include layout="@layout/fragment_competition_list"/>
