--- a/app/src/main/res/layout/item_tim_kompetisi.xml
+++ b/app/src/main/res/layout/item_tim_kompetisi.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="12dp"
     app:cardCornerRadius="14dp"
+    android:layout_margin="5dp"
     app:cardBackgroundColor="#0E152A"
     app:cardElevation="0dp"
     android:id="@+id/container_team_utama">
@@ -215,6 +216,7 @@
             android:gravity="center_vertical">
 
             <ImageView
+                android:id="@+id/iclike"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/icon_like" />
