--- a/app/src/main/res/layout/layout_add_event.xml
+++ b/app/src/main/res/layout/layout_add_event.xml
@@ -152,7 +152,25 @@
                 android:inputType="textCapSentences"/>
 
             <com.naufal.younifirst.custom.CustomEditText
+                android:id="@+id/et_penyelenggara"
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                android:layout_marginTop="24dp"
+                android:textColor="@color/white"
+                android:textColorHint="#66FFFFFF"
+                android:inputType="textCapSentences"/>
+
+            <com.naufal.younifirst.custom.CustomEditText
                 android:id="@+id/et_lokasievent"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/white"
+                android:textColorHint="#66FFFFFF"
+                android:inputType="textCapSentences"/>
+
+            <com.naufal.younifirst.custom.CustomEditText
+                android:id="@+id/et_kapasitas"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginTop="10dp"
@@ -196,7 +214,7 @@
                     android:id="@+id/btnTambahHari"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Tambah Hari"
+                    android:text="Tambah"
                     android:layout_marginLeft="10dp"
                     android:textColor="@color/white"
                     android:textSize="12sp"
@@ -280,7 +298,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Batas Tanggal dan Waktu pelaksanaan"
+                android:text="Batas Tanggal dan Waktu pendaftaran"
                 android:textColor="#FFFFFF"
                 android:textSize="14sp"
                 android:layout_marginTop="10dp"
@@ -290,7 +308,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:text="Tentukkan kapan pendaftaran dibuka dan ditutup."
+                android:text="Tentukkan kapan pendaftaran akan ditutup."
                 android:textColor="#50FFFFFF"
                 android:textSize="12sp"
                 android:fontFamily="@font/is_r"/>
@@ -323,51 +341,23 @@
 
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:text="Tag Terkait"
+                android:textColor="#FFFFFF"
+                android:textSize="14sp"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/is_sb"/>
 
-                <com.naufal.younifirst.custom.CustomEditText
-                    android:id="@+id/tgltutup"
-                    android:layout_width="0dp"
-                    android:layout_height="60dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_weight="1"
-                    android:textColor="@color/white"
-                    android:textColorHint="#66FFFFFF"
-                    android:inputType="textCapSentences"/>
-
-                <com.naufal.younifirst.custom.CustomEditText
-                    android:id="@+id/wkttutup"
-                    android:layout_width="0dp"
-                    android:layout_height="60dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_weight="1"
-                    android:textColor="@color/white"
-                    android:textColorHint="#66FFFFFF"
-                    android:inputType="textCapSentences"/>
-
-            </LinearLayout>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Tag Terkait"
-                    android:textColor="#FFFFFF"
-                    android:textSize="14sp"
-                    android:layout_marginTop="10dp"
-                    android:fontFamily="@font/is_sb"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:text="Pilih atau ketuk tag yang sesuai dengan jenis event"
-                    android:textColor="#50FFFFFF"
-                    android:textSize="12sp"
-                    android:fontFamily="@font/is_r"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="Pilih atau ketuk tag yang sesuai dengan jenis event"
+                android:textColor="#50FFFFFF"
+                android:textSize="12sp"
+                android:fontFamily="@font/is_r"/>
 
             <HorizontalScrollView
                 android:layout_width="match_parent"
@@ -487,14 +477,14 @@
                 </LinearLayout>
 
             </HorizontalScrollView>
-                <com.naufal.younifirst.custom.CustomEditText
-                    android:id="@+id/et_keterangan"
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp"
-                    android:layout_marginTop="10dp"
-                    android:textColor="@color/white"
-                    android:textColorHint="#66FFFFFF"
-                    android:inputType="textCapSentences"/>
+            <com.naufal.younifirst.custom.CustomEditText
+                android:id="@+id/et_keterangan"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/white"
+                android:textColorHint="#66FFFFFF"
+                android:inputType="textCapSentences"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -514,26 +504,26 @@
                 android:textSize="12sp"
                 android:fontFamily="@font/is_r"/>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <ImageButton
-                android:id="@+id/BtnInstagram"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/custom_button_chat_forum"
-                android:src="@drawable/icon_instagram"/>
-            <ImageButton
-                android:id="@+id/BtnWhatsApp"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/custom_button_chat_forum"
-                android:src="@drawable/icon_whatsapp"/>
-        </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <ImageButton
+                    android:id="@+id/BtnInstagram"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/custom_button_chat_forum"
+                    android:src="@drawable/icon_instagram"/>
+                <ImageButton
+                    android:id="@+id/BtnWhatsApp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/custom_button_chat_forum"
+                    android:src="@drawable/icon_whatsapp"/>
+            </LinearLayout>
 
             <com.naufal.younifirst.custom.CustomEditText
                 android:id="@+id/et_wa"
