--- a/app/src/main/res/xml/backup_rules.xml
+++ b/app/src/main/res/xml/backup_rules.xml
@@ -1,13 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?><!--
-   Sample backup rules file; uncomment and customize as necessary.
-   See https://developer.android.com/guide/topics/data/autobackup
-   for details.
-   Note: This file is ignored for devices older than API 31
-   See https://developer.android.com/about/versions/12/backup-restore
--->
+<?xml version="1.0" encoding="utf-8"?>
 <full-backup-content>
-    <!--
-   <include domain="sharedpref" path="."/>
-   <exclude domain="sharedpref" path="device.xml"/>
--->
+    <!-- Backup SharedPreferences -->
+    <include domain="sharedpref" path="YouniFirstPrefs.xml"/>
+    <include domain="sharedpref" path="UserDataBackup.xml"/>
+
+    <!-- Backup files in internal storage -->
+    <include domain="file" path="user_session_data.xml"/>
+    <include domain="file" path="cookies_backup.json"/>
+
+    <!-- Exclude cache and temp files -->
+    <exclude domain="database" path="cache.db"/>
+    <exclude domain="file" path="cache/"/>
+    <exclude domain="file" path="temp/"/>
 </full-backup-content>
